--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
     <title>DomimicanSprt</title>
   </head>
   <body>
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'f2598a562fafcf083cc47a3cb82e6114',
+        'format' : 'iframe',
+        'height' : 60,
+        'width' : 468,
+        'params' : {}
+      };
+      document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://pollingramblefunctions.com/f2598a562fafcf083cc47a3cb82e6114/invoke.js"></scr' + 'ipt>');
+    </script>
+
+<script type="text/javascript">
+  atOptions = {
+    'key' : 'f2598a562fafcf083cc47a3cb82e6114',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+  document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://pollingramblefunctions.com/f2598a562fafcf083cc47a3cb82e6114/invoke.js"></scr' + 'ipt>');
+</script>
+
+<script type="text/javascript">
+  atOptions = {
+    'key' : 'f2598a562fafcf083cc47a3cb82e6114',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+  document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://pollingramblefunctions.com/f2598a562fafcf083cc47a3cb82e6114/invoke.js"></scr' + 'ipt>');
+</script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="/src/adds.js"></script>
   </body>
 </html>
