--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="disfruta de los partidos de pelota en vivo" />
+    <meta name="keywords" content="palabras clave separadas por comas" />
+    <meta name="keywords" content="juegos, pelota, deporte, República Dominicana, equipo,juegos de pelota hoy,juego de pelota en vivo hoy" />
     <title>DomimicanSprt</title>
   </head>
   <body>
-    <script type="text/javascript">
-      atOptions = {
-        'key' : 'f2598a562fafcf083cc47a3cb82e6114',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-      };
-      document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://pollingramblefunctions.com/f2598a562fafcf083cc47a3cb82e6114/invoke.js"></scr' + 'ipt>');
-    </script>
-
+    <script type='text/javascript' src='//pollingramblefunctions.com/ec/96/b9/ec96b93889e914d6f2e02c727d4d382c.js'></script>
 <script type="text/javascript">
   atOptions = {
     'key' : 'f2598a562fafcf083cc47a3cb82e6114',
@@ -41,6 +34,5 @@
 </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/adds.js"></script>
   </body>
 </html>
