cambio de ruta h

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="disfruta de los partidos de pelota en vivo" />
     <meta name="keywords" content="palabras clave separadas por comas" />
     <meta name="keywords" content="juegos, pelota, deporte, República Dominicana, equipo,juegos de pelota hoy,juego de pelota en vivo hoy" />
-    <title>DomimicanSprt</title>
+    <title>juegos de pelota hoy</title>
   </head>
   <body>
     <script type='text/javascript' src='//pollingramblefunctions.com/ec/96/b9/ec96b93889e914d6f2e02c727d4d382c.js'></script>
